# openeo-test-suite

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: internal-tests.yaml  pytest-collect.yaml
docs/: index.md
src/openeo_test_suite/lib/: __init__.py  backend_under_test.py  base.py  collection_metadata.py  compliance_util.py  dask.py  http.py  process_registry.py  process_selection.py  pytest_plugin.py  skipping.py  validate_stac.py  version.py
src/openeo_test_suite/lib/internal-tests/: README.md  test_backend_under_test.py  test_collection_metadata.py  test_process_registry.py  test_process_selection.py  test_skipping.py
src/openeo_test_suite/lib/internal-tests/process_runner/: test_util.py
src/openeo_test_suite/lib/process_runner/: base.py  dask.py  http.py  skip.py  util.py  vito.py  vito_http.py
src/openeo_test_suite/lib/workflows/: io.py  parameters.py  skipping.py
src/openeo_test_suite/tests/: conftest.py  test_dummy.py  test_version.py
src/openeo_test_suite/tests/collections/: README.md  conftest.py  openeo_api_collection_tests.py  test_collections.py
src/openeo_test_suite/tests/general/: README.md  compliance_util.py  openapi.json  test_compliance.py
src/openeo_test_suite/tests/processes/: README.md
src/openeo_test_suite/tests/processes/processing/: conftest.py  (+1 more)
src/openeo_test_suite/tests/workflows/: README.md  conftest.py  test_add_dimension.py  test_apply.py  test_apply_dimension.py  test_load_save.py  test_reduce_bands.py  test_reduce_time.py
(+24 files in other folders)
