[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openeo_test_suite"
version = "0.0.1"
description = "Test suite for validation of openEO back-ends against the openEO API specification."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = [
    "src/openeo_test_suite/tests",
]