[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openeo_test_suite"
version = "0.0.1"
description = "Test suite for validation of openEO back-ends against the openEO API specification."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4",
    "openeo>=0.24.0",
    "json-five>=1.1.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
Dask = [
    "openeo-pg-parser-networkx>=2023.11.0",
    "openeo-processes-dask>=2023.11.6",
]

[tool.pytest.ini_options]
testpaths = [
    "src/openeo_test_suite/tests",
]
